--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,17 +5,18 @@
         <title>{% if page.title %}{{ page.title }} - {% endif %}PHP: The Right Way</title>
         <meta name="description" content="{{ page.description }}"/>
         <meta name="robots" content="index,follow,archive"/>
+        <base href="http://yitsushi.github.com/php-the-right-way/" target="_blank" />
         <meta property="og:image" content="http://www.phptherightway.com/images/og-logo.png"/>
         <meta property="og:title" content="PHP: The Right Way"/>
-        <meta property="og:description" content="An easy-to-read, quick reference for PHP best practices, accepted coding standards, and links to authoritative PHP tutorials around the Web"/>
-        <meta property="og:url" content="http://www.phptherightway.com"/>
-        <meta property="og:site_name" content="PHP: The Right Way"/>
+        <meta property="og:description" content="{{ page.description }}"/>
+        <meta property="og:url" content="http://yitsushi.github.com/php-the-right-way/"/>
+        <meta property="og:site_name" content="PHP: A helyes út"/>
         <meta property="og:type" content="website"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <link href='http://fonts.googleapis.com/css?family=Alfa+Slab+One|Droid+Serif:400,700' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="/styles/all.css"/>
-        <link rel="stylesheet" href="/styles/syntax.css"/>
-        <link rel="icon" href="/images/favicon.png" type="image/png"/>
+        <link rel="stylesheet" href="styles/all.css"/>
+        <link rel="stylesheet" href="styles/syntax.css"/>
+        <link rel="icon" href="images/favicon.png" type="image/png"/>
         <script>
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-362072-7']);
